parser.out
Grammar:

Rule 0     S' -> start
Rule 1     start -> func_def
Rule 2     start -> MODE seen_mode ID tree_body
Rule 3     seen_mode -> <empty>
Rule 4     func_def -> func_signature tree_body
Rule 5     func_signature -> MODE FUNC ID args RETURNS args
Rule 6     args -> ( args_list )
Rule 7     args_list -> empty
Rule 8     args_list -> name_typed COMMA args_list
Rule 9     args_list -> name_typed
Rule 10    tree_body -> { statements }
Rule 11    statements -> statement
Rule 12    statements -> statement statements
Rule 13    statement -> COMMENT
Rule 14    statement -> expr
Rule 15    statement -> assignment
Rule 16    statement -> declaration
Rule 17    declaration -> LET name_typed EQUALS expr
Rule 18    declaration -> LET ID EQUALS expr
Rule 19    assignment -> ID EQUALS expr
Rule 20    expr -> - expr  [precedence=right, level=3]
Rule 21    expr -> ( expr )
Rule 22    expr -> expr @ expr  [precedence=left, level=2]
Rule 23    expr -> expr / expr  [precedence=left, level=2]
Rule 24    expr -> expr * expr  [precedence=left, level=2]
Rule 25    expr -> expr - expr  [precedence=left, level=1]
Rule 26    expr -> expr + expr  [precedence=left, level=1]
Rule 27    expr -> cast_expr
Rule 28    expr -> accessor_expr
Rule 29    expr -> node_expr
Rule 30    expr -> vector_literal
Rule 31    expr -> BOOL
Rule 32    expr -> STRING
Rule 33    expr -> NUMBER
Rule 34    expr -> TYPE
Rule 35    expr -> ID
Rule 36    vector_literal -> [ NUMBER COMMA NUMBER COMMA NUMBER ]
Rule 37    node_expr -> expr ( params_list )
Rule 38    accessor_expr -> expr DOT ID
Rule 39    cast_expr -> expr AS TYPE
Rule 40    params_list -> named_params_list
Rule 41    params_list -> pos COMMA named_params_list
Rule 42    params_list -> pos COMMA params_list
Rule 43    params_list -> pos
Rule 44    params_list -> empty
Rule 45    named_params_list -> named COMMA named_params_list
Rule 46    named_params_list -> named
Rule 47    named -> ID COLON expr
Rule 48    pos -> expr
Rule 49    name_typed -> ID COLON TYPE
Rule 50    empty -> <empty>

Unused terminals:

    POW

Terminals, with rules where they appear:

(                    : 6 21 37
)                    : 6 21 37
*                    : 24
+                    : 26
-                    : 20 25
/                    : 23
@                    : 22
AS                   : 39
BOOL                 : 31
COLON                : 47 49
COMMA                : 8 36 36 41 42 45
COMMENT              : 13
DOT                  : 38
EQUALS               : 17 18 19
FUNC                 : 5
ID                   : 2 5 18 19 35 38 47 49
LET                  : 17 18
MODE                 : 2 5
NUMBER               : 33 36 36 36
POW                  : 
RETURNS              : 5
STRING               : 32
TYPE                 : 34 39 49
[                    : 36
]                    : 36
error                : 
{                    : 10
}                    : 10

Nonterminals, with rules where they appear:

accessor_expr        : 28
args                 : 5 5
args_list            : 6 8
assignment           : 15
cast_expr            : 27
declaration          : 16
empty                : 7 44
expr                 : 14 17 18 19 20 21 22 22 23 23 24 24 25 25 26 26 37 38 39 47 48
func_def             : 1
func_signature       : 4
name_typed           : 8 9 17
named                : 45 46
named_params_list    : 40 41 45
node_expr            : 29
params_list          : 37 42
pos                  : 41 42 43
seen_mode            : 2
start                : 0
statement            : 11 12
statements           : 10 12
tree_body            : 2 4
vector_literal       : 30


state 0

    (0) S' -> . start
    (1) start -> . func_def
    (2) start -> . MODE seen_mode ID tree_body
    (4) func_def -> . func_signature tree_body
    (5) func_signature -> . MODE FUNC ID args RETURNS args
    MODE            shift and go to state 3

    start                          shift and go to state 1
    func_def                       shift and go to state 2
    func_signature                 shift and go to state 4

state 1

    (0) S' -> start .


state 2

    (1) start -> func_def .
    $end            reduce using rule 1 (start -> func_def .)


state 3

    (2) start -> MODE . seen_mode ID tree_body
    (5) func_signature -> MODE . FUNC ID args RETURNS args
    (3) seen_mode -> .
    FUNC            shift and go to state 6
    ID              reduce using rule 3 (seen_mode -> .)

    seen_mode                      shift and go to state 5

state 4

    (4) func_def -> func_signature . tree_body
    (10) tree_body -> . { statements }
    {               shift and go to state 8

    tree_body                      shift and go to state 7

state 5

    (2) start -> MODE seen_mode . ID tree_body
    ID              shift and go to state 9


state 6

    (5) func_signature -> MODE FUNC . ID args RETURNS args
    ID              shift and go to state 10


state 7

    (4) func_def -> func_signature tree_body .
    $end            reduce using rule 4 (func_def -> func_signature tree_body .)


state 8

    (10) tree_body -> { . statements }
    (11) statements -> . statement
    (12) statements -> . statement statements
    (13) statement -> . COMMENT
    (14) statement -> . expr
    (15) statement -> . assignment
    (16) statement -> . declaration
    (20) expr -> . - expr
    (21) expr -> . ( expr )
    (22) expr -> . expr @ expr
    (23) expr -> . expr / expr
    (24) expr -> . expr * expr
    (25) expr -> . expr - expr
    (26) expr -> . expr + expr
    (27) expr -> . cast_expr
    (28) expr -> . accessor_expr
    (29) expr -> . node_expr
    (30) expr -> . vector_literal
    (31) expr -> . BOOL
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . TYPE
    (35) expr -> . ID
    (19) assignment -> . ID EQUALS expr
    (17) declaration -> . LET name_typed EQUALS expr
    (18) declaration -> . LET ID EQUALS expr
    (39) cast_expr -> . expr AS TYPE
    (38) accessor_expr -> . expr DOT ID
    (37) node_expr -> . expr ( params_list )
    (36) vector_literal -> . [ NUMBER COMMA NUMBER COMMA NUMBER ]
    COMMENT         shift and go to state 13
    -               shift and go to state 17
    (               shift and go to state 18
    BOOL            shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    TYPE            shift and go to state 26
    ID              shift and go to state 27
    LET             shift and go to state 28
    [               shift and go to state 29

    statements                     shift and go to state 11
    statement                      shift and go to state 12
    expr                           shift and go to state 14
    assignment                     shift and go to state 15
    declaration                    shift and go to state 16
    cast_expr                      shift and go to state 19
    accessor_expr                  shift and go to state 20
    node_expr                      shift and go to state 21
    vector_literal                 shift and go to state 22

state 9

    (2) start -> MODE seen_mode ID . tree_body
    (10) tree_body -> . { statements }
    {               shift and go to state 8

    tree_body                      shift and go to state 30

state 10

    (5) func_signature -> MODE FUNC ID . args RETURNS args
    (6) args -> . ( args_list )
    (               shift and go to state 32

    args                           shift and go to state 31

state 11

    (10) tree_body -> { statements . }
    }               shift and go to state 33


state 12

    (11) statements -> statement .
    (12) statements -> statement . statements
    (11) statements -> . statement
    (12) statements -> . statement statements
    (13) statement -> . COMMENT
    (14) statement -> . expr
    (15) statement -> . assignment
    (16) statement -> . declaration
    (20) expr -> . - expr
    (21) expr -> . ( expr )
    (22) expr -> . expr @ expr
    (23) expr -> . expr / expr
    (24) expr -> . expr * expr
    (25) expr -> . expr - expr
    (26) expr -> . expr + expr
    (27) expr -> . cast_expr
    (28) expr -> . accessor_expr
    (29) expr -> . node_expr
    (30) expr -> . vector_literal
    (31) expr -> . BOOL
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . TYPE
    (35) expr -> . ID
    (19) assignment -> . ID EQUALS expr
    (17) declaration -> . LET name_typed EQUALS expr
    (18) declaration -> . LET ID EQUALS expr
    (39) cast_expr -> . expr AS TYPE
    (38) accessor_expr -> . expr DOT ID
    (37) node_expr -> . expr ( params_list )
    (36) vector_literal -> . [ NUMBER COMMA NUMBER COMMA NUMBER ]
    }               reduce using rule 11 (statements -> statement .)
    COMMENT         shift and go to state 13
    -               shift and go to state 17
    (               shift and go to state 18
    BOOL            shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    TYPE            shift and go to state 26
    ID              shift and go to state 27
    LET             shift and go to state 28
    [               shift and go to state 29

    statement                      shift and go to state 12
    statements                     shift and go to state 34
    expr                           shift and go to state 14
    assignment                     shift and go to state 15
    declaration                    shift and go to state 16
    cast_expr                      shift and go to state 19
    accessor_expr                  shift and go to state 20
    node_expr                      shift and go to state 21
    vector_literal                 shift and go to state 22

state 13

    (13) statement -> COMMENT .
    COMMENT         reduce using rule 13 (statement -> COMMENT .)
    -               reduce using rule 13 (statement -> COMMENT .)
    (               reduce using rule 13 (statement -> COMMENT .)
    BOOL            reduce using rule 13 (statement -> COMMENT .)
    STRING          reduce using rule 13 (statement -> COMMENT .)
    NUMBER          reduce using rule 13 (statement -> COMMENT .)
    TYPE            reduce using rule 13 (statement -> COMMENT .)
    ID              reduce using rule 13 (statement -> COMMENT .)
    LET             reduce using rule 13 (statement -> COMMENT .)
    [               reduce using rule 13 (statement -> COMMENT .)
    }               reduce using rule 13 (statement -> COMMENT .)


state 14

    (14) statement -> expr .
    (22) expr -> expr . @ expr
    (23) expr -> expr . / expr
    (24) expr -> expr . * expr
    (25) expr -> expr . - expr
    (26) expr -> expr . + expr
    (39) cast_expr -> expr . AS TYPE
    (38) accessor_expr -> expr . DOT ID
    (37) node_expr -> expr . ( params_list )
  ! shift/reduce conflict for - resolved as shift
  ! shift/reduce conflict for ( resolved as shift
    COMMENT         reduce using rule 14 (statement -> expr .)
    BOOL            reduce using rule 14 (statement -> expr .)
    STRING          reduce using rule 14 (statement -> expr .)
    NUMBER          reduce using rule 14 (statement -> expr .)
    TYPE            reduce using rule 14 (statement -> expr .)
    ID              reduce using rule 14 (statement -> expr .)
    LET             reduce using rule 14 (statement -> expr .)
    [               reduce using rule 14 (statement -> expr .)
    }               reduce using rule 14 (statement -> expr .)
    @               shift and go to state 35
    /               shift and go to state 36
    *               shift and go to state 37
    -               shift and go to state 38
    +               shift and go to state 39
    AS              shift and go to state 40
    DOT             shift and go to state 41
    (               shift and go to state 42


state 15

    (15) statement -> assignment .
    COMMENT         reduce using rule 15 (statement -> assignment .)
    -               reduce using rule 15 (statement -> assignment .)
    (               reduce using rule 15 (statement -> assignment .)
    BOOL            reduce using rule 15 (statement -> assignment .)
    STRING          reduce using rule 15 (statement -> assignment .)
    NUMBER          reduce using rule 15 (statement -> assignment .)
    TYPE            reduce using rule 15 (statement -> assignment .)
    ID              reduce using rule 15 (statement -> assignment .)
    LET             reduce using rule 15 (statement -> assignment .)
    [               reduce using rule 15 (statement -> assignment .)
    }               reduce using rule 15 (statement -> assignment .)


state 16

    (16) statement -> declaration .
    COMMENT         reduce using rule 16 (statement -> declaration .)
    -               reduce using rule 16 (statement -> declaration .)
    (               reduce using rule 16 (statement -> declaration .)
    BOOL            reduce using rule 16 (statement -> declaration .)
    STRING          reduce using rule 16 (statement -> declaration .)
    NUMBER          reduce using rule 16 (statement -> declaration .)
    TYPE            reduce using rule 16 (statement -> declaration .)
    ID              reduce using rule 16 (statement -> declaration .)
    LET             reduce using rule 16 (statement -> declaration .)
    [               reduce using rule 16 (statement -> declaration .)
    }               reduce using rule 16 (statement -> declaration .)


state 17

    (20) expr -> - . expr
    (20) expr -> . - expr
    (21) expr -> . ( expr )
    (22) expr -> . expr @ expr
    (23) expr -> . expr / expr
    (24) expr -> . expr * expr
    (25) expr -> . expr - expr
    (26) expr -> . expr + expr
    (27) expr -> . cast_expr
    (28) expr -> . accessor_expr
    (29) expr -> . node_expr
    (30) expr -> . vector_literal
    (31) expr -> . BOOL
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . TYPE
    (35) expr -> . ID
    (39) cast_expr -> . expr AS TYPE
    (38) accessor_expr -> . expr DOT ID
    (37) node_expr -> . expr ( params_list )
    (36) vector_literal -> . [ NUMBER COMMA NUMBER COMMA NUMBER ]
    -               shift and go to state 17
    (               shift and go to state 18
    BOOL            shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    TYPE            shift and go to state 26
    ID              shift and go to state 44
    [               shift and go to state 29

    expr                           shift and go to state 43
    cast_expr                      shift and go to state 19
    accessor_expr                  shift and go to state 20
    node_expr                      shift and go to state 21
    vector_literal                 shift and go to state 22

state 18

    (21) expr -> ( . expr )
    (20) expr -> . - expr
    (21) expr -> . ( expr )
    (22) expr -> . expr @ expr
    (23) expr -> . expr / expr
    (24) expr -> . expr * expr
    (25) expr -> . expr - expr
    (26) expr -> . expr + expr
    (27) expr -> . cast_expr
    (28) expr -> . accessor_expr
    (29) expr -> . node_expr
    (30) expr -> . vector_literal
    (31) expr -> . BOOL
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . TYPE
    (35) expr -> . ID
    (39) cast_expr -> . expr AS TYPE
    (38) accessor_expr -> . expr DOT ID
    (37) node_expr -> . expr ( params_list )
    (36) vector_literal -> . [ NUMBER COMMA NUMBER COMMA NUMBER ]
    -               shift and go to state 17
    (               shift and go to state 18
    BOOL            shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    TYPE            shift and go to state 26
    ID              shift and go to state 44
    [               shift and go to state 29

    expr                           shift and go to state 45
    cast_expr                      shift and go to state 19
    accessor_expr                  shift and go to state 20
    node_expr                      shift and go to state 21
    vector_literal                 shift and go to state 22

state 19

    (27) expr -> cast_expr .
    @               reduce using rule 27 (expr -> cast_expr .)
    /               reduce using rule 27 (expr -> cast_expr .)
    *               reduce using rule 27 (expr -> cast_expr .)
    -               reduce using rule 27 (expr -> cast_expr .)
    +               reduce using rule 27 (expr -> cast_expr .)
    AS              reduce using rule 27 (expr -> cast_expr .)
    DOT             reduce using rule 27 (expr -> cast_expr .)
    (               reduce using rule 27 (expr -> cast_expr .)
    COMMENT         reduce using rule 27 (expr -> cast_expr .)
    BOOL            reduce using rule 27 (expr -> cast_expr .)
    STRING          reduce using rule 27 (expr -> cast_expr .)
    NUMBER          reduce using rule 27 (expr -> cast_expr .)
    TYPE            reduce using rule 27 (expr -> cast_expr .)
    ID              reduce using rule 27 (expr -> cast_expr .)
    LET             reduce using rule 27 (expr -> cast_expr .)
    [               reduce using rule 27 (expr -> cast_expr .)
    }               reduce using rule 27 (expr -> cast_expr .)
    )               reduce using rule 27 (expr -> cast_expr .)
    COMMA           reduce using rule 27 (expr -> cast_expr .)


state 20

    (28) expr -> accessor_expr .
    @               reduce using rule 28 (expr -> accessor_expr .)
    /               reduce using rule 28 (expr -> accessor_expr .)
    *               reduce using rule 28 (expr -> accessor_expr .)
    -               reduce using rule 28 (expr -> accessor_expr .)
    +               reduce using rule 28 (expr -> accessor_expr .)
    AS              reduce using rule 28 (expr -> accessor_expr .)
    DOT             reduce using rule 28 (expr -> accessor_expr .)
    (               reduce using rule 28 (expr -> accessor_expr .)
    COMMENT         reduce using rule 28 (expr -> accessor_expr .)
    BOOL            reduce using rule 28 (expr -> accessor_expr .)
    STRING          reduce using rule 28 (expr -> accessor_expr .)
    NUMBER          reduce using rule 28 (expr -> accessor_expr .)
    TYPE            reduce using rule 28 (expr -> accessor_expr .)
    ID              reduce using rule 28 (expr -> accessor_expr .)
    LET             reduce using rule 28 (expr -> accessor_expr .)
    [               reduce using rule 28 (expr -> accessor_expr .)
    }               reduce using rule 28 (expr -> accessor_expr .)
    )               reduce using rule 28 (expr -> accessor_expr .)
    COMMA           reduce using rule 28 (expr -> accessor_expr .)


state 21

    (29) expr -> node_expr .
    @               reduce using rule 29 (expr -> node_expr .)
    /               reduce using rule 29 (expr -> node_expr .)
    *               reduce using rule 29 (expr -> node_expr .)
    -               reduce using rule 29 (expr -> node_expr .)
    +               reduce using rule 29 (expr -> node_expr .)
    AS              reduce using rule 29 (expr -> node_expr .)
    DOT             reduce using rule 29 (expr -> node_expr .)
    (               reduce using rule 29 (expr -> node_expr .)
    COMMENT         reduce using rule 29 (expr -> node_expr .)
    BOOL            reduce using rule 29 (expr -> node_expr .)
    STRING          reduce using rule 29 (expr -> node_expr .)
    NUMBER          reduce using rule 29 (expr -> node_expr .)
    TYPE            reduce using rule 29 (expr -> node_expr .)
    ID              reduce using rule 29 (expr -> node_expr .)
    LET             reduce using rule 29 (expr -> node_expr .)
    [               reduce using rule 29 (expr -> node_expr .)
    }               reduce using rule 29 (expr -> node_expr .)
    )               reduce using rule 29 (expr -> node_expr .)
    COMMA           reduce using rule 29 (expr -> node_expr .)


state 22

    (30) expr -> vector_literal .
    @               reduce using rule 30 (expr -> vector_literal .)
    /               reduce using rule 30 (expr -> vector_literal .)
    *               reduce using rule 30 (expr -> vector_literal .)
    -               reduce using rule 30 (expr -> vector_literal .)
    +               reduce using rule 30 (expr -> vector_literal .)
    AS              reduce using rule 30 (expr -> vector_literal .)
    DOT             reduce using rule 30 (expr -> vector_literal .)
    (               reduce using rule 30 (expr -> vector_literal .)
    COMMENT         reduce using rule 30 (expr -> vector_literal .)
    BOOL            reduce using rule 30 (expr -> vector_literal .)
    STRING          reduce using rule 30 (expr -> vector_literal .)
    NUMBER          reduce using rule 30 (expr -> vector_literal .)
    TYPE            reduce using rule 30 (expr -> vector_literal .)
    ID              reduce using rule 30 (expr -> vector_literal .)
    LET             reduce using rule 30 (expr -> vector_literal .)
    [               reduce using rule 30 (expr -> vector_literal .)
    }               reduce using rule 30 (expr -> vector_literal .)
    )               reduce using rule 30 (expr -> vector_literal .)
    COMMA           reduce using rule 30 (expr -> vector_literal .)


state 23

    (31) expr -> BOOL .
    @               reduce using rule 31 (expr -> BOOL .)
    /               reduce using rule 31 (expr -> BOOL .)
    *               reduce using rule 31 (expr -> BOOL .)
    -               reduce using rule 31 (expr -> BOOL .)
    +               reduce using rule 31 (expr -> BOOL .)
    AS              reduce using rule 31 (expr -> BOOL .)
    DOT             reduce using rule 31 (expr -> BOOL .)
    (               reduce using rule 31 (expr -> BOOL .)
    COMMENT         reduce using rule 31 (expr -> BOOL .)
    BOOL            reduce using rule 31 (expr -> BOOL .)
    STRING          reduce using rule 31 (expr -> BOOL .)
    NUMBER          reduce using rule 31 (expr -> BOOL .)
    TYPE            reduce using rule 31 (expr -> BOOL .)
    ID              reduce using rule 31 (expr -> BOOL .)
    LET             reduce using rule 31 (expr -> BOOL .)
    [               reduce using rule 31 (expr -> BOOL .)
    }               reduce using rule 31 (expr -> BOOL .)
    )               reduce using rule 31 (expr -> BOOL .)
    COMMA           reduce using rule 31 (expr -> BOOL .)


state 24

    (32) expr -> STRING .
    @               reduce using rule 32 (expr -> STRING .)
    /               reduce using rule 32 (expr -> STRING .)
    *               reduce using rule 32 (expr -> STRING .)
    -               reduce using rule 32 (expr -> STRING .)
    +               reduce using rule 32 (expr -> STRING .)
    AS              reduce using rule 32 (expr -> STRING .)
    DOT             reduce using rule 32 (expr -> STRING .)
    (               reduce using rule 32 (expr -> STRING .)
    COMMENT         reduce using rule 32 (expr -> STRING .)
    BOOL            reduce using rule 32 (expr -> STRING .)
    STRING          reduce using rule 32 (expr -> STRING .)
    NUMBER          reduce using rule 32 (expr -> STRING .)
    TYPE            reduce using rule 32 (expr -> STRING .)
    ID              reduce using rule 32 (expr -> STRING .)
    LET             reduce using rule 32 (expr -> STRING .)
    [               reduce using rule 32 (expr -> STRING .)
    }               reduce using rule 32 (expr -> STRING .)
    )               reduce using rule 32 (expr -> STRING .)
    COMMA           reduce using rule 32 (expr -> STRING .)


state 25

    (33) expr -> NUMBER .
    @               reduce using rule 33 (expr -> NUMBER .)
    /               reduce using rule 33 (expr -> NUMBER .)
    *               reduce using rule 33 (expr -> NUMBER .)
    -               reduce using rule 33 (expr -> NUMBER .)
    +               reduce using rule 33 (expr -> NUMBER .)
    AS              reduce using rule 33 (expr -> NUMBER .)
    DOT             reduce using rule 33 (expr -> NUMBER .)
    (               reduce using rule 33 (expr -> NUMBER .)
    COMMENT         reduce using rule 33 (expr -> NUMBER .)
    BOOL            reduce using rule 33 (expr -> NUMBER .)
    STRING          reduce using rule 33 (expr -> NUMBER .)
    NUMBER          reduce using rule 33 (expr -> NUMBER .)
    TYPE            reduce using rule 33 (expr -> NUMBER .)
    ID              reduce using rule 33 (expr -> NUMBER .)
    LET             reduce using rule 33 (expr -> NUMBER .)
    [               reduce using rule 33 (expr -> NUMBER .)
    }               reduce using rule 33 (expr -> NUMBER .)
    )               reduce using rule 33 (expr -> NUMBER .)
    COMMA           reduce using rule 33 (expr -> NUMBER .)


state 26

    (34) expr -> TYPE .
    @               reduce using rule 34 (expr -> TYPE .)
    /               reduce using rule 34 (expr -> TYPE .)
    *               reduce using rule 34 (expr -> TYPE .)
    -               reduce using rule 34 (expr -> TYPE .)
    +               reduce using rule 34 (expr -> TYPE .)
    AS              reduce using rule 34 (expr -> TYPE .)
    DOT             reduce using rule 34 (expr -> TYPE .)
    (               reduce using rule 34 (expr -> TYPE .)
    COMMENT         reduce using rule 34 (expr -> TYPE .)
    BOOL            reduce using rule 34 (expr -> TYPE .)
    STRING          reduce using rule 34 (expr -> TYPE .)
    NUMBER          reduce using rule 34 (expr -> TYPE .)
    TYPE            reduce using rule 34 (expr -> TYPE .)
    ID              reduce using rule 34 (expr -> TYPE .)
    LET             reduce using rule 34 (expr -> TYPE .)
    [               reduce using rule 34 (expr -> TYPE .)
    }               reduce using rule 34 (expr -> TYPE .)
    )               reduce using rule 34 (expr -> TYPE .)
    COMMA           reduce using rule 34 (expr -> TYPE .)


state 27

    (35) expr -> ID .
    (19) assignment -> ID . EQUALS expr
    @               reduce using rule 35 (expr -> ID .)
    /               reduce using rule 35 (expr -> ID .)
    *               reduce using rule 35 (expr -> ID .)
    -               reduce using rule 35 (expr -> ID .)
    +               reduce using rule 35 (expr -> ID .)
    AS              reduce using rule 35 (expr -> ID .)
    DOT             reduce using rule 35 (expr -> ID .)
    (               reduce using rule 35 (expr -> ID .)
    COMMENT         reduce using rule 35 (expr -> ID .)
    BOOL            reduce using rule 35 (expr -> ID .)
    STRING          reduce using rule 35 (expr -> ID .)
    NUMBER          reduce using rule 35 (expr -> ID .)
    TYPE            reduce using rule 35 (expr -> ID .)
    ID              reduce using rule 35 (expr -> ID .)
    LET             reduce using rule 35 (expr -> ID .)
    [               reduce using rule 35 (expr -> ID .)
    }               reduce using rule 35 (expr -> ID .)
    EQUALS          shift and go to state 46


state 28

    (17) declaration -> LET . name_typed EQUALS expr
    (18) declaration -> LET . ID EQUALS expr
    (49) name_typed -> . ID COLON TYPE
    ID              shift and go to state 48

    name_typed                     shift and go to state 47

state 29

    (36) vector_literal -> [ . NUMBER COMMA NUMBER COMMA NUMBER ]
    NUMBER          shift and go to state 49


state 30

    (2) start -> MODE seen_mode ID tree_body .
    $end            reduce using rule 2 (start -> MODE seen_mode ID tree_body .)


state 31

    (5) func_signature -> MODE FUNC ID args . RETURNS args
    RETURNS         shift and go to state 50


state 32

    (6) args -> ( . args_list )
    (7) args_list -> . empty
    (8) args_list -> . name_typed COMMA args_list
    (9) args_list -> . name_typed
    (50) empty -> .
    (49) name_typed -> . ID COLON TYPE
    )               reduce using rule 50 (empty -> .)
    ID              shift and go to state 54

    args_list                      shift and go to state 51
    empty                          shift and go to state 52
    name_typed                     shift and go to state 53

state 33

    (10) tree_body -> { statements } .
    $end            reduce using rule 10 (tree_body -> { statements } .)


state 34

    (12) statements -> statement statements .
    }               reduce using rule 12 (statements -> statement statements .)


state 35

    (22) expr -> expr @ . expr
    (20) expr -> . - expr
    (21) expr -> . ( expr )
    (22) expr -> . expr @ expr
    (23) expr -> . expr / expr
    (24) expr -> . expr * expr
    (25) expr -> . expr - expr
    (26) expr -> . expr + expr
    (27) expr -> . cast_expr
    (28) expr -> . accessor_expr
    (29) expr -> . node_expr
    (30) expr -> . vector_literal
    (31) expr -> . BOOL
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . TYPE
    (35) expr -> . ID
    (39) cast_expr -> . expr AS TYPE
    (38) accessor_expr -> . expr DOT ID
    (37) node_expr -> . expr ( params_list )
    (36) vector_literal -> . [ NUMBER COMMA NUMBER COMMA NUMBER ]
    -               shift and go to state 17
    (               shift and go to state 18
    BOOL            shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    TYPE            shift and go to state 26
    ID              shift and go to state 44
    [               shift and go to state 29

    expr                           shift and go to state 55
    cast_expr                      shift and go to state 19
    accessor_expr                  shift and go to state 20
    node_expr                      shift and go to state 21
    vector_literal                 shift and go to state 22

state 36

    (23) expr -> expr / . expr
    (20) expr -> . - expr
    (21) expr -> . ( expr )
    (22) expr -> . expr @ expr
    (23) expr -> . expr / expr
    (24) expr -> . expr * expr
    (25) expr -> . expr - expr
    (26) expr -> . expr + expr
    (27) expr -> . cast_expr
    (28) expr -> . accessor_expr
    (29) expr -> . node_expr
    (30) expr -> . vector_literal
    (31) expr -> . BOOL
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . TYPE
    (35) expr -> . ID
    (39) cast_expr -> . expr AS TYPE
    (38) accessor_expr -> . expr DOT ID
    (37) node_expr -> . expr ( params_list )
    (36) vector_literal -> . [ NUMBER COMMA NUMBER COMMA NUMBER ]
    -               shift and go to state 17
    (               shift and go to state 18
    BOOL            shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    TYPE            shift and go to state 26
    ID              shift and go to state 44
    [               shift and go to state 29

    expr                           shift and go to state 56
    cast_expr                      shift and go to state 19
    accessor_expr                  shift and go to state 20
    node_expr                      shift and go to state 21
    vector_literal                 shift and go to state 22

state 37

    (24) expr -> expr * . expr
    (20) expr -> . - expr
    (21) expr -> . ( expr )
    (22) expr -> . expr @ expr
    (23) expr -> . expr / expr
    (24) expr -> . expr * expr
    (25) expr -> . expr - expr
    (26) expr -> . expr + expr
    (27) expr -> . cast_expr
    (28) expr -> . accessor_expr
    (29) expr -> . node_expr
    (30) expr -> . vector_literal
    (31) expr -> . BOOL
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . TYPE
    (35) expr -> . ID
    (39) cast_expr -> . expr AS TYPE
    (38) accessor_expr -> . expr DOT ID
    (37) node_expr -> . expr ( params_list )
    (36) vector_literal -> . [ NUMBER COMMA NUMBER COMMA NUMBER ]
    -               shift and go to state 17
    (               shift and go to state 18
    BOOL            shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    TYPE            shift and go to state 26
    ID              shift and go to state 44
    [               shift and go to state 29

    expr                           shift and go to state 57
    cast_expr                      shift and go to state 19
    accessor_expr                  shift and go to state 20
    node_expr                      shift and go to state 21
    vector_literal                 shift and go to state 22

state 38

    (25) expr -> expr - . expr
    (20) expr -> . - expr
    (21) expr -> . ( expr )
    (22) expr -> . expr @ expr
    (23) expr -> . expr / expr
    (24) expr -> . expr * expr
    (25) expr -> . expr - expr
    (26) expr -> . expr + expr
    (27) expr -> . cast_expr
    (28) expr -> . accessor_expr
    (29) expr -> . node_expr
    (30) expr -> . vector_literal
    (31) expr -> . BOOL
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . TYPE
    (35) expr -> . ID
    (39) cast_expr -> . expr AS TYPE
    (38) accessor_expr -> . expr DOT ID
    (37) node_expr -> . expr ( params_list )
    (36) vector_literal -> . [ NUMBER COMMA NUMBER COMMA NUMBER ]
    -               shift and go to state 17
    (               shift and go to state 18
    BOOL            shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    TYPE            shift and go to state 26
    ID              shift and go to state 44
    [               shift and go to state 29

    expr                           shift and go to state 58
    cast_expr                      shift and go to state 19
    accessor_expr                  shift and go to state 20
    node_expr                      shift and go to state 21
    vector_literal                 shift and go to state 22

state 39

    (26) expr -> expr + . expr
    (20) expr -> . - expr
    (21) expr -> . ( expr )
    (22) expr -> . expr @ expr
    (23) expr -> . expr / expr
    (24) expr -> . expr * expr
    (25) expr -> . expr - expr
    (26) expr -> . expr + expr
    (27) expr -> . cast_expr
    (28) expr -> . accessor_expr
    (29) expr -> . node_expr
    (30) expr -> . vector_literal
    (31) expr -> . BOOL
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . TYPE
    (35) expr -> . ID
    (39) cast_expr -> . expr AS TYPE
    (38) accessor_expr -> . expr DOT ID
    (37) node_expr -> . expr ( params_list )
    (36) vector_literal -> . [ NUMBER COMMA NUMBER COMMA NUMBER ]
    -               shift and go to state 17
    (               shift and go to state 18
    BOOL            shift and go to state 23
    STRING          shift and go to state 24
    NUMBER          shift and go to state 25
    TYPE            shift and go to state 26
    ID              shift and go to state 44
    [               shift and go to state 29

    expr                           shift and go to state 59
    cast_expr                      shift and go to state 19
    accessor_expr                  shift and go to state 20
    node_expr                      shift and go to state 21
    vector_literal                 shift and go to state 22

state 40

    (39) cast_expr -> expr AS . TYPE
    TYPE            shift and go to state 60


state 41

    (38) accessor_expr -> expr DOT . ID
    ID              shift and go to state 61


state 42
